--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorPurple">#FF4A1863</color>
+    <color name="colorMagenta">#E5007D</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGreen">#40FF43</color>
+    <color name="colorRed">#f71616</color>
+    <color name="TransBlack">#767676</color>
+    <color name="colorBlack">#000000</color>
+    <color name="TransGrey">#d1191919</color>
 </resources>
