--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,8 +101,9 @@
         android:id="@+id/mapview"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
 
     </fragment>
@@ -174,7 +175,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="60dp">
 
         <ImageView
             android:layout_width="40dp"
@@ -239,6 +240,24 @@
             android:text="Go Home"/>
 
     </LinearLayout>
+
+
+    <Button
+        android:id="@+id/play_pause_button"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignStart="@+id/start_btn"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="111dp"
+        android:background="@drawable/pause_background"
+        android:paddingRight="10dp"
+        android:text="Pause"
+        android:textAllCaps="false"
+        android:textColor="@color/TransGrey" />
+
+
 
 
 
