--- a/app/src/main/res/layout/dialog_mission_settings.xml
+++ b/app/src/main/res/layout/dialog_mission_settings.xml
@@ -12,8 +12,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:orientation="vertical"
         android:paddingBottom="10dp"
         android:paddingEnd="1dp"
@@ -24,8 +22,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="WAYPOINT CONFIGURATION"
-            android:textSize="20dp"
+            android:text="@string/waypoint_configuration"
+            android:textSize="20sp"
             android:textColor="@color/colorWhite"
             android:textAllCaps="true"
             android:textStyle="bold"></TextView>
@@ -34,24 +32,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorWhite"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:text="Waypoint Altitude (metres)"></TextView>
+            android:textSize="20sp"
+            android:text="@string/waypoint_altitude_metres"></TextView>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorWhite"
-            android:layout_marginLeft="15dp"
-            android:textSize="10dp"
-            android:text="Altitude must be less than 100m"></TextView>
+            android:layout_marginStart="15dp"
+            android:textSize="10sp"
+            android:text="@string/altitude"></TextView>
 
         <EditText
             android:id="@+id/altitude_editText"
             android:layout_width="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_height="wrap_content"></EditText>
+            android:inputType="number"></EditText>
 
         <CheckBox
             android:id="@+id/task_checkBox"
