Added Sampling time and hardcoded waypoints

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -266,7 +266,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginStart="12dp"
         android:layout_marginBottom="150dp"
-        android:background="@drawable/pause_background"
+        android:background="@color/colorPrimaryDark"
         android:paddingRight="10dp"
         android:text="@string/waypoint_text"
         android:textAllCaps="false"
