--- a/app/src/main/res/layout-v23/activity_main.xml
+++ b/app/src/main/res/layout-v23/activity_main.xml
@@ -105,9 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="10dp"
-        android:layout_toBottomOf="@+id/main_statusbar"
+        android:layout_below="@+id/main_statusbar"
         android:background="@drawable/rounded_edge_background"
         android:elevation="2dp"
         android:orientation="horizontal"
