--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,10 +104,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_below="@+id/main_statusbar"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="10dp"
-        android:layout_toBottomOf="@+id/main_statusbar"
         android:background="@drawable/rounded_edge_background"
         android:elevation="2dp"
         android:orientation="horizontal"
